# rust-android-example

./: android.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/rust_demo/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/android/: Library.kt
android/app/src/main/java/com/example/rust_demo/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/rust_demo/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  rust.h
rust/src/: lib.rs
