[package]
name = "rust"
version = "0.1.0"
authors = ["Trevor Wang <trevor.wang@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19.0", default-features = false }

[profile.release]
lto = true

[lib]
name = "rust"
crate-type = ["cdylib"]
